# tube-rs

tube-rs-client/: .gitignore  angular.json  karma.conf.js  package.json
tube-rs-client/e2e/src/: app.e2e-spec.ts
tube-rs-client/src/: index.html
tube-rs-client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
tube-rs-client/src/app/daemon-settings/: daemon-settings.component.html  daemon-settings.component.spec.ts  daemon-settings.component.ts
tube-rs-client/src/app/home/: home.component.html  home.component.scss  home.component.ts
tube-rs-client/src/app/main-nav/: main-nav.component.html  main-nav.component.scss  main-nav.component.ts
tube-rs-client/src/app/models/: default_option.ts  option-group.ts  video-option.ts  video.ts
tube-rs-client/src/app/services/: option.service.spec.ts  option.service.ts  video.service.ts
tube-rs-client/src/app/settings/: settings.component.html  settings.component.scss  settings.component.ts
tube-rs-daemon/: .env  Cargo.toml
tube-rs-daemon/migrations/2020-07-15-165355_create_tables/: down.sql  up.sql
tube-rs-daemon/migrations/2020-07-25-081740_create_default_options/: down.sql  up.sql
tube-rs-daemon/migrations/2020-08-06-182749_create_youtube_flags/: up.sql
tube-rs-daemon/src/: db_models.rs  main.rs  models.rs  option_actions.rs  options.rs  schema.rs  video_actions.rs  videos.rs
tube-rs-daemon/src/daemon/: mod.rs
tube-rs-option-generator/: .gitignore  Cargo.toml  data.json  options.txt
tube-rs-option-generator/src/: main.rs
(+15 files in other folders)
