[package]
name = "tube-rs"
version = "0.1.0"
authors = ["Stefan Rupertsberger <s.rupertsberger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2.0"
actix-files = "0.2.2"

bytes = "0.5"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3.1"
r2d2 = "0.8"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
threadpool = "1.0"

libsqlite3-sys = { version = "*", features = ["bundled"] }
